2009-03-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Code cleanup. Fix "make distcheck"
	
	* bin/cce.in: Revert use of $CC (test argument was left by mistake
	in previous commit). Only list env.vars that have an effect.

	* demo/Makefile.am: Erase fft_table.slh during clean. Cleanup
	makefile.

2009-03-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add FFT example code. Fixes thanks to testing.
	
	* demo/fft.sl,
	* demo/fft_gentable.c: Add new demo program.
	* demo/Makefile.am: Update accordingly.

	* lib/svplib/io.sl: Fix display of FP numbers.
	
	* bin/spp (pppalpha.addswchll): Avoid adding "swch" on
	instructions that use the index/tls register just after the
	beginning of the function.

	* bin/slc.in: Fix use of mktemp (use template with X's).

2009-03-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve use of Autotools & code cleanup.
	
	* m4/m4.m4: Add.
	* configure.ac: Check for more programs. In particular, the MT
	utilities are checked explicitly. Require GNU m4. Rename
	USE_TESTSUITE into ENABLE_TESTSUITE. Use BASH instead of SBASH.

	* bin/Makefile.am,
	* bin/cce.in,
	* bin/slc.in,	
	* bin/sgr.in: Update accordingly. Simplify. Now the scripts use
	the values supplied by Autoconf for defaults. (They can still be
	overriden via variables).

	* tests.mk: Set environment variables before calling `slc' and
	`slt'. The ".local" scripts are not needed any more.

	* demo/Makefile.am,
	* tests/Makefile.am: Update accordingly.

	* lib/Makefile.am: Split into...
	* lib/mtalpha.mk: this,
	* lib/seqc.mk: this,
	* lib/ptl.mk: and this.

	* lib/r-mtalpha-sim: Rename to...
	* lib/r-mtalpha-sim.in: this. Take location of simulator from Autoconf.
	* lib/r-mtsparc-sim.in: Duplicate feature from r-mtalpha-sim.
	* configure.ac: Update accordingly.

	* Makefile.am: Add rule "show-vars" for convenience.
	* doc/HACKING.txt: Document show-vars.

2009-03-22  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix definition of places for the simulator.
	