@@ -7,8 +7,10 @@
 
 DEMOS = 10threads.sl answer.sl fibonacci.sl helloworld.sl roman.sl 
 EXTRA_DEMOS = fft.sl
+BUILT_SOURCES = fft_table.slh
+
 ALL_DEMOS = $(DEMOS) $(EXTRA_DEMOS)
-EXTRA_DIST = $(ALL_DEMOS)
+EXTRA_DIST = $(ALL_DEMOS) $(BUILT_SOURCES)
 
 # Definitions for "make check":
 
@@ -18,6 +20,7 @@ include $(top_srcdir)/tests.mk
 # Also build demos during "make all":
 
 noinst_DATA = $(ALL_DEMOS:.sl=.mtalpha-x) $(ALL_DEMOS:.sl=.ptl-x) $(ALL_DEMOS:.sl=.seqc-x)
+CLEANFILES = $(noinst_DATA) 
 
 SUFFIXES = .sl .mtalpha-x
 
@@ -30,14 +33,18 @@ SUFFIXES = .sl .mtalpha-x
 .sl.seqc-x:
 	$(SLC) -b seqc -o $@ $<
 
+fft.ptl-x fft.seqc-x fft.mtalpha-x: fft.sl fft_table.slh
+
 # Special targets for the FFT demo:
+if MAINTAINER_MODE
 
 noinst_PROGRAMS = fft_gentable
 fft_gentable_SOURCES = fft_gentable.c
-BUILT_SOURCES = fft_table.slh
+fft_gentable_CFLAGS = -O0 -ffloat-store
 
 fft_table.slh: fft_gentable$(EXEEXT)
 	./fft_gentable$(EXEEXT) >$@
 
-CLEANFILES = $(noinst_DATA) $(BUILT_SOURCES)
+MAINTAINERCLEANFILES = $(BUILT_SOURCES)
 
+endif
